[package]
authors = ["sopium"]
license = "GPL-3.0"
build = "build.rs"
name = "titun"
version = "0.0.2"

[[bin]]
doc = false
name = "titun"
path = "src/main.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
byteorder = "1.0.0"
clap = "2.19.3"
data-encoding = "1.1.2"
env_logger = "0.3.5"
futures = "0.1.7"
log = "0.3.6"
mio = "0.6.2"
nix = "0.7.0"
serde = "0.8.21"
serde_derive = "0.8.21"
serde_yaml = "0.5.0"
sodiumoxide = { git = "https://github.com/dnaq/sodiumoxide", rev = "12d49e8ed1b53821465f24312695376eb86c89d2" }
tokio-core = "0.1.2"
tokio-signal = "0.1"

[lib]
name = "titun"
path = "src/lib.rs"

[profile.release]
lto = true
