[package]
authors = ["sopium"]
build = "build.rs"
license = "GPL-3.0"
name = "titun"
version = "0.0.4"

[[bin]]
doc = false
name = "titun"
path = "src/main.rs"

[build-dependencies]
gcc = "0.3"

[dependencies]
byteorder = "1.0.0"
clap = "2.19.3"
data-encoding = "1.1.2"
env_logger = "0.4.0"
futures = "0.1.7"
log = "0.3.6"
mio = "0.6.2"
nix = "0.7.0"
serde = "0.9.4"
serde_derive = "0.9.4"
serde_yaml = "0.6.0"
sodiumoxide = "0.0.14"
tokio-core = "0.1.2"
tokio-signal = "0.1"

[lib]
name = "titun"
path = "src/lib.rs"

[profile.release]
lto = true
